# analisis_linguistico

./: .gitignore  Analisis documentos img.ipynb  Analisis metalinguisticos.ipynb  Analisis niveles linguisticos.ipynb  Análisis de corpus.ipynb  README.md  main.py  pyproject.toml
